--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- about section -->
 
   <section class="about_section layout_padding">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="detail-box pr-md-2">
@@ -151,84 +151,49 @@
         </p>
       </div>
       <div class="service_container">
-        <div class="carousel-wrap ">
-          <div class="service_owl-carousel owl-carousel">
-            <div class="item">
+        <div class="container">
+          <div class="row">
+            <div class="item col-md-4">
               <div class="box ">
                 <div class="img-box">
                   <img src="images/s1.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Electrical Repairs
+                    Domácí telefony
                   </h5>
                   <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas
-                    quos voluptatem possimus reprehenderit repellendus mollitia.
+                    Instalace, opravy, rekonstrukce původních systémů
                   </p>
                 </div>
               </div>
             </div>
-            <div class="item">
+            <div class="item col-md-4">
               <div class="box ">
                 <div class="img-box">
                   <img src="images/s2.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Equipment Installation
+                    Elektroinstalace
                   </h5>
                   <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas
-                    quos voluptatem possimus reprehenderit repellendus mollitia.
+                    V novostavbách i v stávajících objektech
                   </p>
                 </div>
               </div>
             </div>
-            <div class="item">
+            <div class="item col-md-4">
               <div class="box ">
                 <div class="img-box">
                   <img src="images/s3.png" alt="" />
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Electrical Wiring
+                    Alarmy
                   </h5>
                   <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas
-                    quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Security
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas
-                    quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s5.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Lighting
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas
-                    quos voluptatem possimus reprehenderit repellendus mollitia.
+                    Elektronické zabezpečovací signalizace EZS
                   </p>
                 </div>
               </div>
