--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
         <div class="col-md-7 mx-auto">
           <div class="form_container">
             <div class="heading_container heading_center">
-              <h2>Napíšte nám</h2>
+              <h2>Napište nám</h2>
             </div>
             <form action="">
               <div class="form-row">
