--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div class="col-md-7 mx-auto">
           <div class="form_container">
             <div class="heading_container heading_center">
-              <h2>Napíšte nám</h2>
+              <h2>Napište nám</h2>
             </div>
             <form action="">
               <div class="form-row">
@@ -252,7 +252,7 @@
   <!-- end contact section -->
 
    <!-- info section -->
-   <section class="info_section ">
+  <section class="info_section ">
     <div class="container">
       <div class="info_top">
         <div class="row">
