Added service anchors

--- a/index.html
+++ b/index.html
@@ -154,50 +154,56 @@
       <div class="service_container">
         <div class="container">
           <div class="row">
-            <div class="item col-md-4">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s1.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Domácí telefony
-                  </h5>
-                  <p>
-                    Instalace, opravy, rekonstrukce původních systémů
-                  </p>
-                </div>
+              <div class="item col-md-4">
+                <a href="service.html#home_phones">
+                  <div class="box ">
+                    <div class="img-box">
+                      <img src="images/s1.png" alt="" />
+                    </div>
+                    <div class="detail-box">
+                      <h5>
+                        Domácí telefony
+                      </h5>
+                      <p>
+                        Instalace, opravy, rekonstrukce původních systémů
+                      </p>
+                    </div>
+                  </div>
+                </a>
               </div>
+            <div class="item col-md-4">
+              <a href="service.html#elektroinstallation">
+                <div class="box ">
+                  <div class="img-box">
+                    <img src="images/s2.png" alt="" />
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      Elektroinstalace
+                    </h5>
+                    <p>
+                      V novostavbách i v stávajících objektech
+                    </p>
+                  </div>
+                </div>
+              </a>
             </div>
             <div class="item col-md-4">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s2.png" alt="" />
+              <a href="service.html#alarms">
+                <div class="box ">
+                  <div class="img-box">
+                    <img src="images/s3.png" alt="" />
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      Alarmy
+                    </h5>
+                    <p>
+                      Elektronické zabezpečovací signalizace EZS
+                    </p>
+                  </div>
                 </div>
-                <div class="detail-box">
-                  <h5>
-                    Elektroinstalace
-                  </h5>
-                  <p>
-                    V novostavbách i v stávajících objektech
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item col-md-4">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s3.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Alarmy
-                  </h5>
-                  <p>
-                    Elektronické zabezpečovací signalizace EZS
-                  </p>
-                </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
