--- a/service.html
+++ b/service.html
@@ -88,91 +88,45 @@
           If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
         </p>
       </div>
-      <div class="service_container">
-        <div class="carousel-wrap ">
-          <div class="service_owl-carousel owl-carousel">
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s1.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Repairs
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s2.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Equipment Installation
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s3.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Wiring
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Security
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s5.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Lighting
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+    </div>
+  </section>
+
+  <section id="home_phones" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Domácí telefony
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla telefony
+        </p>
       </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
+    </div>
+  </section>
+
+  <section id="elektroinstallation" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Elektroinstalace
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla instalace
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="alarms" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Alarmy
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla alarmy
+        </p>
       </div>
     </div>
   </section>
