--- a/service.html
+++ b/service.html
@@ -79,16 +79,66 @@
   <!-- service section -->
 
   <section class="service_section layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center ">
-        <h2 class="">
-          Naše služby
-        </h2>
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-7">
+          <div class="detail-box pr-md-2">
+            <div class="heading_container">
+              <h2 class="">
+                Naše služby
+              </h2>
+            </div>
+
+
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+          Především se zaměřujeme na:
         </p>
+        <ul class="detail_p_mt">
+          <li>elektroinstalace jak v novostavbách tak v stávajících objektech</li>
+          <li>rekonstrukce stávajících elektrorozvodů, úpravy instalací</li>
+          <li>montáže, údržbu, úpravy, změny a opravy elektrorozvodů</li>
+          <li>domácí telefony, instalace, opravy, rekonstrukce původních systémů</li>
+          <li>alarmy - elektronické zabezpečovací signalizace EZS</li>
+          <li>revize elektro</li>
+          <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
+          <li>zámečnické práce drobného charakteru</li>
+        </ul>
+        V objektech:
+        <ul class="detail_p_mt">
+          <li>rodinné domy</li>
+          <li>byty</li>
+          <li>rekreační objekty</li>
+          <li>obchodní a firemní prostory</li>
+          <li>kancelářské objekty</li>
+          <li>parkovací prostory</li>
+        </ul>
+        Rozsah činnosti:
+        <ul class="detail_p_mt">
+          <li>elektroinstalace rodinných domů , bytů, chat, provozoven, kanceláří a podobných objektů</li>
+          <li>elektropráce v bytových jádrech, kuchyních a jiných prostor při jejich rekonstrukcích, úpravách, nebo změnách dispozic</li>
+          <li>výměna starých hliníkových rozvodů za měděné, dle platných norem</li>
+          <li>vyhledávání a odstraňování poruch v elektrorozvodech</li>
+          <li>výměna rozváděčů, jističů, zásuvek, vypínačů, svítidel a ostatních elektrozařízení</li>
+          <li>přemístění , změny a doplnění zásuvkových, světelných a jiných obvodů</li>
+          <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
+          <li>připojení elektrospotřebičů, svítidel a ostatních elektrozařízení</li>
+          <li>zafrézování kabelů do panelu a zasekání nebo odvrtání vypínačů i zásuvek do zdiva a jiných stavebních materiálů za použití profesionálního nářadí s odsáváním prachu</li>
+          <li>instalace, opravy zvonkových tabel, zvonkových rozvodů a systémů domácích telefonů</li>
+          <li>montáž a připojení světelných reklam a poutačů</li>
+          <li>opravy a údržba elektroinstalace</li>
+          <li>automatické osvětlení společných prostor obytných domů, pohybové senzory - čidla</li>
+          <li>rekonstrukce osvětlení a elektroinstalací společných prostor obytných domů</li>
+          <li>slaboproudé a datové rozvody</li>
+          <li>instalace elektronických zabezpečovacích systémů - alarmů</li>
+          <li>certifikace pro montáž alarmů a ostatních zařízení dodavatelských firem Jablotron Alarms a.s., Paradox</li>
+          <li>revize elektro, jak výchozí tak periodické</li>
+          <li>drobné zámečnické práce</li>
+        </ul>
       </div>
 
+    </div>
+  </div>
     </div>
   </section>
 
@@ -126,6 +176,19 @@
         </h2>
         <p class="col-lg-8 px-0">
           Blabla alarmy
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="other" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Jiné služby
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla ostatní
         </p>
       </div>
     </div>
