Added the note to Why page.

--- a/why.html
+++ b/why.html
@@ -89,7 +89,7 @@
           Osvědčení
         </h2>
         <p class="col-lg-8 px-0">
-          pár slov o kvalifikaci
+          Na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením
         </p>
       </div>
       <div class="lightbox-gallery">
