Renamed files, fixed the all rights reserved.

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                 <a class="nav-link" href="index.html">Úvod <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">O firmě</a>
+                <a class="nav-link" href="o_firme.html">O firmě</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html">Služby</a>
+                <a class="nav-link" href="sluzby.html">Služby</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="prices.html">Ceník</a>
+                <a class="nav-link" href="cenik.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html"> Osvědčení </a>
+                <a class="nav-link" href="osvedceni.html"> Osvědčení </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -92,7 +92,7 @@
           Elektroinstalace podle Vašich představ !
         </p>
         <div class="btn-box">
-          <a href="contact.html" class="btn1">
+          <a href="kontakt.html" class="btn1">
             Kontaktujte nás
           </a>
         </div>
@@ -121,7 +121,7 @@
             </p>
               
       <div class="btn-box">
-        <a href="about.html">
+        <a href="o_firme.html">
           Podrobněji
         </a>
       </div>
@@ -155,7 +155,7 @@
         <div class="container">
           <div class="row">
               <div class="item col-md-4">
-                <a href="service.html#home_phones">
+                <a href="sluzby.html#home_phones">
                   <div class="box ">
                     <div class="img-box">
                       <img src="images/s1.png" alt="" />
@@ -172,7 +172,7 @@
                 </a>
               </div>
             <div class="item col-md-4">
-              <a href="service.html#elektroinstallation">
+              <a href="sluzby.html#elektroinstallation">
                 <div class="box ">
                   <div class="img-box">
                     <img src="images/s2.png" alt="" />
@@ -189,7 +189,7 @@
               </a>
             </div>
             <div class="item col-md-4">
-              <a href="service.html#alarms">
+              <a href="sluzby.html#alarms">
                 <div class="box ">
                   <div class="img-box">
                     <img src="images/s3.png" alt="" />
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="service.html">
+        <a href="sluzby.html">
           Podrobněji
         </a>
       </div>
@@ -329,8 +329,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Elektrikář-Ostrava
       </p>
     </div>
   </footer>
