--- a/osvedceni.html
+++ b/osvedceni.html
@@ -17,6 +17,7 @@
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -53,20 +54,20 @@
               <li class="nav-item ">
                 <a class="nav-link" href="index.html">Úvod </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="o_firme.html"> O firmě</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sluzby.html">Služby</a>
+              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="about.html"> O firmě <span class="sr-only">(current)</span> </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="service.html">Služby</a>
+                <a class="nav-link" href="cenik.html">Ceník</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="prices.html">Ceník</a>
+                <a class="nav-link" href="osvedceni.html"> Osvědčení <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html"> Osvědčení </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -76,47 +77,40 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
+  <!-- why us section -->
 
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7">
-          <div class="detail-box pr-md-2">
-            <div class="heading_container">
-              <h2 class="">
-                O firmě
-              </h2>
-            </div>
-            <p class="detail_p_mt">
-              Poskytujeme služby v oblasti elektromontážních prací, drobného zámečnictví a elektronických zabezpečovacích systémů. 
-              Zaměřujeme se především na elektroinstalace v domovní a bytové výstavbě včetně instalací a oprav domácích telefonů a zvonků.
-            </p>
-            <ul class="detail_p_mt">
-              <li>jsme malá firma s již více než dvacetiletou praxí v oboru</li>
-              <li>sídlíme v Ostravě-Porubě a na soukromém trhu působíme od roku 1997</li>
-              <li>za osobního přístupu jsme schopni provádět naše služby operativně, kvalitně a profesionálně, díky nízkým režijním nákladům za příznivé ceny</li>
-              <li>cílem naší činnosti je především kvalitně odvedená práce a spokojený zákazník</li>
-              <li>provádíme montáže, opravy, údržbu a revize elektroinstalací, silnoproudých i slaboproudých rozvodů, domovních telefonů a zvonků</li>
-              <li>nabízíme také montáž elektronických zabezpečovacích systémů EZS a drobné zámečnické práce</li>
-              <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
-              <li>odborná osvědčení vlastníme ke všem našim činnostem</li>
-            </ul>
-            <p class="detail_p_mt">
-              Jsme plátci DPH - využijte snížené sazby DPH 15% pro občanskou výstavbu při zakoupení materiálu i s jeho montáží. U elektronických zabezpečovacích systémů firmy Jablotron Alarms a.s. poskytujeme prodlouženou záruku na vybraná zařízení po dobu až 7-mi let. 
-              Technickou konzultaci a cenovou nabídku zpracujeme nezávazně a zdarma.</p>
-          </div>
-        </div>
-        <div class="col-md-5 ">
-          <div class="img-box ">
-            <img src="images/about-img.jpg" class="box_img" alt="about img">
-          </div>
-        </div>
+  <section class="why_us_section layout_padding">
+    <div class="why_bg_box">
+      <img src="images/why-bg.jpg" alt="">
+    </div>
+    <div class="why_us_container">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Osvědčení
+        </h2>
+        <p class="col-lg-8 px-0">
+          Na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením
+        </p>
       </div>
+      <div class="lightbox-gallery">
+        <div class="container">
+            <div class="row photos">
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv1.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv1.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv2.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv2.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv3.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv3.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv4.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv4.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv5.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv5.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv6.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv6.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv7.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv7.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv8.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv8.jpg"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="images/osv9.jpg" data-lightbox="photos"><img class="img-fluid" src="images/osv9.jpg"></a></div>
+            </div>
+        </div>
+    </div>
     </div>
   </section>
 
-  <!-- about section ends -->
+  <!-- end why us section -->
 
   <!-- info section -->
   <section class="info_section ">
@@ -190,8 +184,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Elektrikář-Ostrava
       </p>
     </div>
   </footer>
@@ -209,6 +202,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
 
 </body>
 
