--- a/sluzby.html
+++ b/sluzby.html
@@ -54,19 +54,19 @@
                 <a class="nav-link" href="index.html">Úvod </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> O firmě</a>
+                <a class="nav-link" href="o_firme.html"> O firmě</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="service.html">Služby </a>
+                <a class="nav-link" href="sluzby.html">Služby <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="prices.html">Ceník <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="cenik.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html"> Osvědčení </a>
+                <a class="nav-link" href="osvedceni.html"> Osvědčení </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -79,100 +79,116 @@
   <!-- service section -->
 
   <section class="service_section layout_padding">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-7">
+          <div class="detail-box pr-md-2">
+            <div class="heading_container">
+              <h2 class="">
+                Naše služby
+              </h2>
+            </div>
+
+
+        <p class="col-lg-8 px-0">
+          Především se zaměřujeme na:
+        </p>
+        <ul class="detail_p_mt">
+          <li>elektroinstalace jak v novostavbách tak v stávajících objektech</li>
+          <li>rekonstrukce stávajících elektrorozvodů, úpravy instalací</li>
+          <li>montáže, údržbu, úpravy, změny a opravy elektrorozvodů</li>
+          <li>domácí telefony, instalace, opravy, rekonstrukce původních systémů</li>
+          <li>alarmy - elektronické zabezpečovací signalizace EZS</li>
+          <li>revize elektro</li>
+          <li>zámečnické práce drobného charakteru</li>
+        </ul>
+        V objektech:
+        <ul class="detail_p_mt">
+          <li>rodinné domy</li>
+          <li>byty</li>
+          <li>rekreační objekty</li>
+          <li>obchodní a firemní prostory</li>
+          <li>kancelářské objekty</li>
+          <li>parkovací prostory</li>
+        </ul>
+        Rozsah činnosti:
+        <ul class="detail_p_mt">
+          <li>elektroinstalace rodinných domů , bytů, chat, provozoven, kanceláří a podobných objektů</li>
+          <li>elektropráce v bytových jádrech, kuchyních a jiných prostor při jejich rekonstrukcích, úpravách, nebo změnách dispozic</li>
+          <li>výměna starých hliníkových rozvodů za měděné, dle platných norem</li>
+          <li>vyhledávání a odstraňování poruch v elektrorozvodech</li>
+          <li>výměna rozváděčů, jističů, zásuvek, vypínačů, svítidel a ostatních elektrozařízení</li>
+          <li>přemístění , změny a doplnění zásuvkových, světelných a jiných obvodů</li>
+          <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
+          <li>připojení elektrospotřebičů, svítidel a ostatních elektrozařízení</li>
+          <li>zafrézování kabelů do panelu a zasekání nebo odvrtání vypínačů i zásuvek do zdiva a jiných stavebních materiálů za použití profesionálního nářadí s odsáváním prachu</li>
+          <li>instalace, opravy zvonkových tabel, zvonkových rozvodů a systémů domácích telefonů</li>
+          <li>montáž a připojení světelných reklam a poutačů</li>
+          <li>opravy a údržba elektroinstalace</li>
+          <li>automatické osvětlení společných prostor obytných domů, pohybové senzory - čidla</li>
+          <li>rekonstrukce osvětlení a elektroinstalací společných prostor obytných domů</li>
+          <li>slaboproudé a datové rozvody</li>
+          <li>instalace elektronických zabezpečovacích systémů - alarmů</li>
+          <li>certifikace pro montáž alarmů a ostatních zařízení dodavatelských firem Jablotron Alarms a.s., Paradox</li>
+          <li>revize elektro, jak výchozí tak periodické</li>
+          <li>drobné zámečnické práce</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+    </div>
+  </section>
+
+  <section id="home_phones" class="layout_padding">
     <div class="container-fluid">
       <div class="heading_container heading_center ">
         <h2 class="">
-          Ceník
+          Domácí telefony
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+          Blabla telefony
         </p>
       </div>
-      <div class="service_container">
-        <div class="carousel-wrap ">
-          <div class="service_owl-carousel owl-carousel">
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s1.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Repairs
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s2.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Equipment Installation
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s3.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Wiring
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s4.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Electrical Security
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="box ">
-                <div class="img-box">
-                  <img src="images/s5.png" alt="" />
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Lighting
-                  </h5>
-                  <p>
-                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    </div>
+  </section>
+
+  <section id="elektroinstallation" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Elektroinstalace
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla instalace
+        </p>
       </div>
-      <div class="btn-box">
-        <a href="">
-          Read More
-        </a>
+    </div>
+  </section>
+
+  <section id="alarms" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Alarmy
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla alarmy
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="other" class="layout_padding">
+    <div class="container-fluid">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Jiné služby
+        </h2>
+        <p class="col-lg-8 px-0">
+          Blabla ostatní
+        </p>
       </div>
     </div>
   </section>
@@ -251,8 +267,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Elektrikář-Ostrava
       </p>
     </div>
   </footer>
