--- a/cenik.html
+++ b/cenik.html
@@ -51,22 +51,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
               <li class="nav-item ">
-                <a class="nav-link" href="index.html">Úvod</a>
+                <a class="nav-link" href="index.html">Úvod </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">O firmě</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="service.html">Služby</a>
+                <a class="nav-link" href="o_firme.html"> O firmě</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="prices.html">Ceník</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="why.html"> Osvědčení </a>
+                <a class="nav-link" href="sluzby.html">Služby </a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Kontakt<span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="cenik.html">Ceník <span class="sr-only">(current)</span> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="osvedceni.html"> Osvědčení </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -76,79 +76,110 @@
     <!-- end header section -->
   </div>
 
-  <!-- contact section -->
-  <section class="contact_section layout_padding">
+  <!-- service section -->
+
+  <section class="service_section layout_padding">
     <div class="container-fluid">
-      <div class="container">
-        <div class="heading_container heading_center">
-          <h2>Kontakt</h2>
-        </div>
-        <div class="row align-items-start">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="widget widget-contact">
-                    <!-- widget search -->
-                    <address>
-                        <strong>Dušan Špánik</strong>
-                        <br> Svojsíkova 1594/6
-                        <br> 708 00 Ostrava-Poruba
-                        <br> IČ: 66714699
-                        <br> DIČ: CZ 6807080599
-                        <br>
-                        <abbr title="Telefon">Tel:</abbr><a href="tel:+420604763257">+420 603 788 636</a>
-                    </address>
-                    <address>
-                        <strong>Email</strong>
-                        <br>
-                        <a href="mailto:#">elmechanic@seznam.cz</a>
-                    </address>
-                    <address>
-                        <strong>Provozovna</strong>
-                        <br> Provozní 3236
-                        <br> 723 00 Ostrava-Martinov
-                    </address>
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Ceník
+        </h2>
+        <p class="col-lg-8 px-0">
+          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+        </p>
+      </div>
+      <div class="service_container">
+        <div class="carousel-wrap ">
+          <div class="service_owl-carousel owl-carousel">
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s1.png" alt="" />
                 </div>
+                <div class="detail-box">
+                  <h5>
+                    Electrical Repairs
+                  </h5>
+                  <p>
+                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
+                  </p>
+                </div>
+              </div>
             </div>
-                <!-- /.widget search -->
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.8596541186553!2d18.190110276060533!3d49.845094530766275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e3de79453731%3A0x51d04f9da2a29436!2sProvozn%C3%AD%203236%2C%20723%2000%20Ostrava%2023!5e0!3m2!1scs!2scz!4v1708379327630!5m2!1scs!2scz" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="450"></iframe>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s2.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Equipment Installation
+                  </h5>
+                  <p>
+                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
+                  </p>
+                </div>
+              </div>
             </div>
-        </div>
-    </div>
-      <div class="row layout_padding">
-        <div class="col-md-7 mx-auto">
-          <div class="form_container">
-            <div class="heading_container heading_center">
-              <h2>Napište nám</h2>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s3.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Electrical Wiring
+                  </h5>
+                  <p>
+                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
+                  </p>
+                </div>
+              </div>
             </div>
-            <form action="">
-              <div class="form-row">
-                <div class="form-group col">
-                  <input type="text" class="form-control" placeholder="Vaše jméno" />
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s4.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Electrical Security
+                  </h5>
+                  <p>
+                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
+                  </p>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="form-group col-lg-6">
-                  <input type="text" class="form-control" placeholder="Telefonní číslo" />
+            </div>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s5.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Lighting
+                  </h5>
+                  <p>
+                    Repellat perspiciatis sint in minus! Quaerat numquam nobis expedita debitis aut optio omnis voluptas quos voluptatem possimus reprehenderit repellendus mollitia.
+                  </p>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="form-group col">
-                  <input type="text" class="message-box form-control" placeholder="Zpráva" />
-                </div>
-              </div>
-              <div class="btn_box">
-                <button>
-                  Odeslat
-                </button>
-              </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
+      <div class="btn-box">
+        <a href="">
+          Read More
+        </a>
+      </div>
     </div>
   </section>
-  <!-- end contact section -->
 
+  <!-- service section ends -->
+
+  <!-- info section -->
   <section class="info_section ">
     <div class="container">
       <div class="info_top">
@@ -214,12 +245,13 @@
     </div>
   </section>
 
+  <!-- end info_section -->
+
   <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Elektrikář-Ostrava
       </p>
     </div>
   </footer>
