--- a/o_firme.html
+++ b/o_firme.html
@@ -53,20 +53,20 @@
               <li class="nav-item ">
                 <a class="nav-link" href="index.html">Úvod </a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="o_firme.html"> O firmě <span class="sr-only">(current)</span> </a>
+              </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> O firmě</a>
+                <a class="nav-link" href="sluzby.html">Služby</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="service.html">Služby <span class="sr-only">(current)</span> </a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="prices.html">Ceník</a>
+                <a class="nav-link" href="cenik.html">Ceník</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="why.html"> Osvědčení </a>
+                <a class="nav-link" href="osvedceni.html"> Osvědčení </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
+                <a class="nav-link" href="kontakt.html">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -76,124 +76,47 @@
     <!-- end header section -->
   </div>
 
-  <!-- service section -->
+  <!-- about section -->
 
-  <section class="service_section layout_padding">
+  <section class="about_section layout_padding">
     <div class="container">
       <div class="row">
-
         <div class="col-md-7">
           <div class="detail-box pr-md-2">
             <div class="heading_container">
               <h2 class="">
-                Naše služby
+                O firmě
               </h2>
             </div>
-
-
-        <p class="col-lg-8 px-0">
-          Především se zaměřujeme na:
-        </p>
-        <ul class="detail_p_mt">
-          <li>elektroinstalace jak v novostavbách tak v stávajících objektech</li>
-          <li>rekonstrukce stávajících elektrorozvodů, úpravy instalací</li>
-          <li>montáže, údržbu, úpravy, změny a opravy elektrorozvodů</li>
-          <li>domácí telefony, instalace, opravy, rekonstrukce původních systémů</li>
-          <li>alarmy - elektronické zabezpečovací signalizace EZS</li>
-          <li>revize elektro</li>
-          <li>zámečnické práce drobného charakteru</li>
-        </ul>
-        V objektech:
-        <ul class="detail_p_mt">
-          <li>rodinné domy</li>
-          <li>byty</li>
-          <li>rekreační objekty</li>
-          <li>obchodní a firemní prostory</li>
-          <li>kancelářské objekty</li>
-          <li>parkovací prostory</li>
-        </ul>
-        Rozsah činnosti:
-        <ul class="detail_p_mt">
-          <li>elektroinstalace rodinných domů , bytů, chat, provozoven, kanceláří a podobných objektů</li>
-          <li>elektropráce v bytových jádrech, kuchyních a jiných prostor při jejich rekonstrukcích, úpravách, nebo změnách dispozic</li>
-          <li>výměna starých hliníkových rozvodů za měděné, dle platných norem</li>
-          <li>vyhledávání a odstraňování poruch v elektrorozvodech</li>
-          <li>výměna rozváděčů, jističů, zásuvek, vypínačů, svítidel a ostatních elektrozařízení</li>
-          <li>přemístění , změny a doplnění zásuvkových, světelných a jiných obvodů</li>
-          <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
-          <li>připojení elektrospotřebičů, svítidel a ostatních elektrozařízení</li>
-          <li>zafrézování kabelů do panelu a zasekání nebo odvrtání vypínačů i zásuvek do zdiva a jiných stavebních materiálů za použití profesionálního nářadí s odsáváním prachu</li>
-          <li>instalace, opravy zvonkových tabel, zvonkových rozvodů a systémů domácích telefonů</li>
-          <li>montáž a připojení světelných reklam a poutačů</li>
-          <li>opravy a údržba elektroinstalace</li>
-          <li>automatické osvětlení společných prostor obytných domů, pohybové senzory - čidla</li>
-          <li>rekonstrukce osvětlení a elektroinstalací společných prostor obytných domů</li>
-          <li>slaboproudé a datové rozvody</li>
-          <li>instalace elektronických zabezpečovacích systémů - alarmů</li>
-          <li>certifikace pro montáž alarmů a ostatních zařízení dodavatelských firem Jablotron Alarms a.s., Paradox</li>
-          <li>revize elektro, jak výchozí tak periodické</li>
-          <li>drobné zámečnické práce</li>
-        </ul>
-      </div>
-
-    </div>
-  </div>
-    </div>
-  </section>
-
-  <section id="home_phones" class="layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center ">
-        <h2 class="">
-          Domácí telefony
-        </h2>
-        <p class="col-lg-8 px-0">
-          Blabla telefony
-        </p>
+            <p class="detail_p_mt">
+              Poskytujeme služby v oblasti elektromontážních prací, drobného zámečnictví a elektronických zabezpečovacích systémů. 
+              Zaměřujeme se především na elektroinstalace v domovní a bytové výstavbě včetně instalací a oprav domácích telefonů a zvonků.
+            </p>
+            <ul class="detail_p_mt">
+              <li>jsme malá firma s již více než dvacetiletou praxí v oboru</li>
+              <li>sídlíme v Ostravě-Porubě a na soukromém trhu působíme od roku 1997</li>
+              <li>za osobního přístupu jsme schopni provádět naše služby operativně, kvalitně a profesionálně, díky nízkým režijním nákladům za příznivé ceny</li>
+              <li>cílem naší činnosti je především kvalitně odvedená práce a spokojený zákazník</li>
+              <li>provádíme montáže, opravy, údržbu a revize elektroinstalací, silnoproudých i slaboproudých rozvodů, domovních telefonů a zvonků</li>
+              <li>nabízíme také montáž elektronických zabezpečovacích systémů EZS a drobné zámečnické práce</li>
+              <li>na prováděné práce jsme vybaveni potřebným proškolením, nářadím a technickým vybavením</li>
+              <li>odborná osvědčení vlastníme ke všem našim činnostem</li>
+            </ul>
+            <p class="detail_p_mt">
+              Jsme plátci DPH - využijte snížené sazby DPH 15% pro občanskou výstavbu při zakoupení materiálu i s jeho montáží. U elektronických zabezpečovacích systémů firmy Jablotron Alarms a.s. poskytujeme prodlouženou záruku na vybraná zařízení po dobu až 7-mi let. 
+              Technickou konzultaci a cenovou nabídku zpracujeme nezávazně a zdarma.</p>
+          </div>
+        </div>
+        <div class="col-md-5 ">
+          <div class="img-box ">
+            <img src="images/about-img.jpg" class="box_img" alt="about img">
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="elektroinstallation" class="layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center ">
-        <h2 class="">
-          Elektroinstalace
-        </h2>
-        <p class="col-lg-8 px-0">
-          Blabla instalace
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section id="alarms" class="layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center ">
-        <h2 class="">
-          Alarmy
-        </h2>
-        <p class="col-lg-8 px-0">
-          Blabla alarmy
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section id="other" class="layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center ">
-        <h2 class="">
-          Jiné služby
-        </h2>
-        <p class="col-lg-8 px-0">
-          Blabla ostatní
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- service section ends -->
+  <!-- about section ends -->
 
   <!-- info section -->
   <section class="info_section ">
@@ -267,8 +190,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved By Elektrikář-Ostrava
       </p>
     </div>
   </footer>
