--- a/index.html
+++ b/index.html
@@ -228,24 +228,27 @@
             <div class="heading_container heading_center">
               <h2>Napište nám</h2>
             </div>
-            <form action="">
-              <div class="form-row">
-                <div class="form-group col">
-                  <input type="text" class="form-control" placeholder="Vaše jméno" />
-                </div>
-              </div>
+            <form action="https://formsubmit.co/anastasiyasergeevnap@gmail.com" method="POST">
               <div class="form-row">
                 <div class="form-group col-lg-6">
-                  <input type="text" class="form-control" placeholder="Telefonní číslo" />
+                  <input type="text" name="Jméno" class="form-control" placeholder="Vaše jméno" required/>
+                </div>
+                <div class="form-group col-lg-6">
+                  <input type="text" name="Číslo" class="form-control" placeholder="Telefonní číslo" required/>
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <input type="text" class="message-box form-control" placeholder="Zpráva" />
+                  <input type="text" name="Email" class="form-control" placeholder="Email" required/>
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col">
+                  <input type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required/>
                 </div>
               </div>
               <div class="btn_box">
-                <button>
+                <button type="submit">
                   Odeslat
                 </button>
               </div>
