--- a/kontakt.html
+++ b/kontakt.html
@@ -94,7 +94,7 @@
                         <br> IČ: 66714699
                         <br> DIČ: CZ 6807080599
                         <br>
-                        <abbr title="Telefon">Tel:</abbr><a href="tel:+420604763257">+420 603 788 636</a>
+                        <abbr title="Telefon"></abbr><a href="tel:+420604763257">+420 603 788 636</a>
                     </address>
                     <address>
                         <strong>Email</strong>
@@ -157,20 +157,22 @@
       <div class="info_top">
         <div class="row">
           <div class="col-lg-4 col-md-6">
-            <p class="navbar-brand">
-              Elektrikář-ostrava
-            </p>
+            <a href="index.html">
+              <p class="navbar-brand">
+                Elektrikář-ostrava
+              </p>
+            </a>
           </div>
           <div class="col-lg-4 col-md-6">
               <p>
                 <i class="fa fa-globe" aria-hidden="true"></i>
-                  elmechanic<wbr>@seznam.cz
+                <a href="mailto:#" style="color:#ffffff;">elmechanic<wbr>@seznam.cz</a>
               </p>
           </div>
           <div class="col-lg-4 col-md-6">
               <p>
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                  +420 603 788 636
+                <abbr title="Telefon"></abbr><a href="tel:+420604763257" style="color:#ffffff;">+420 603 788 636</a>
               </p>
           </div>
         </div>
