Added the multiline text field for message entering.

--- a/kontakt.html
+++ b/kontakt.html
@@ -143,9 +143,9 @@
               </div>
               <div class="form-row">
                 <div class="form-group col">
-                  <input type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required
+                  <textarea  type="text" name="Zpráva" class="message-box form-control" placeholder="Zpráva" required
                   oninvalid="this.setCustomValidity('Napište zprávu nebo otázku')"
-                  oninput="this.setCustomValidity('')"/>
+                  oninput="this.setCustomValidity('')"> </textarea>
                 </div>
               </div>
               <div class="btn_box">
